cambie una letra

--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 
         <nav>    
 	         <ul>
-		         <li><a target="_blank" href= "file:///C:/Users/RYZEN/Desktop/Curso%20javascript/index.html">Entra aquí despúes de leer</a></li>
+		         <li><a target="_blank" href= "file:///C:/Users/RYZEN/Desktop/Curso%20javascript/index.html">Entra aquí despúes de leerr</a></li>
 		         <li><a href="#">Te amo mucho</a></li>
 		         <li><a href="#">Eres la mejor</a></li>
 		         <li><a href="#">Gracias mi preciosa</a></li>
